{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 196,
  "lineage": "7e1667b2-11b9-00fb-7f5e-af4754a2b13b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sshSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806935228835:security-group/sg-0fb3a7212e385b2bf",
            "description": "acesso-ssh",
            "filter": [
              {
                "name": "tag:name",
                "values": [
                  "ssh"
                ]
              }
            ],
            "id": "sg-0fb3a7212e385b2bf",
            "name": "acesso-ssh",
            "tags": {
              "name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0719efafb34d5d828"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "defaultSB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806935228835:subnet/subnet-086e61ac0d4d80130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.200.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Corp_Net_A - Public"
                ]
              }
            ],
            "id": "subnet-086e61ac0d4d80130",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806935228835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Corp_Net_A - Public",
              "kubernetes.io/cluster/teste-eks": "shared"
            },
            "vpc_id": "vpc-0719efafb34d5d828"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806935228835:vpc/vpc-0719efafb34d5d828",
            "cidr_block": "10.200.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0368d419274016152",
                "cidr_block": "10.200.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-f2425a89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Main VPC"
                ]
              }
            ],
            "id": "vpc-0719efafb34d5d828",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dd4e11dc72af0e92",
            "owner_id": "806935228835",
            "tags": {
              "Environment": "Local",
              "Name": "Main VPC",
              "kubernetes.io/cluster/teste-eks": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8f583dc1e4879cb",
            "arn": "arn:aws:ec2:us-east-1:806935228835:instance/i-0eac97a0061e2828f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eac97a0061e2828f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "notebook",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a197520c109cd3d3",
            "private_dns": "ip-10-200-0-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.0.117",
            "public_ip": "107.23.191.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a1a456d38ef1013",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb790fb713784df0",
              "sg-0fb3a7212e385b2bf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086e61ac0d4d80130",
            "tags": {
              "Contact": "fabiofrade.infralinux@gmail.com",
              "Key": "notebook",
              "Name": "docker_instance"
            },
            "tags_all": {
              "Contact": "fabiofrade.infralinux@gmail.com",
              "Key": "notebook",
              "Name": "docker_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb790fb713784df0",
              "sg-0fb3a7212e385b2bf"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "data.aws_ami.amzn2",
            "data.aws_security_group.sshSG",
            "data.aws_subnet.defaultSB",
            "data.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806935228835:security-group/sg-0eb790fb713784df0",
            "description": "Allow HTTP and HTTPS Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb790fb713784df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_access",
            "name_prefix": "",
            "owner_id": "806935228835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "Terraform",
              "Name": "Allow_Web_Access"
            },
            "tags_all": {
              "Managed": "Terraform",
              "Name": "Allow_Web_Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0719efafb34d5d828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.MyVPC"
          ]
        }
      ]
    }
  ]
}